--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
+<app-nav></app-nav>
 <h1>{{title}}</h1>
 
+<div class="container" style="margin-top: 100px"></div>
 <ul>
   <li *ngFor='let user of users'>{{user.id}} - {{user.userName}}</li>
 </ul>
