--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -3,6 +3,7 @@
     <hr>
     <div class="form-group">
         <input type="text" class="form-control" name="username" [(ngModel)]="model.username" placeholder="Username">
+        &nbsp;
         <input type="password" class="form-control" name="password" [(ngModel)]="model.password" placeholder="Password">
     </div>
 
