--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-2">
-        <p *ngFor="let member of members">{{member.firstName}} {{member.lastName}}</p>
+    <div class="col-2" *ngFor="let member of members">
+        <app-member-card [member]="member"></app-member-card>
     </div>
 </div>
