Updated AppUser, database contents, and styles of member cards.

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -34,4 +34,21 @@
             </div>
         </div>
     </div>
+    <div class="col-8">
+        <tabset class="member-tabset">
+            <tab heading='About {{member.firstName}} {{member.lastName}}'>
+                <h4>Description</h4>
+                <p>{{member.experience}}</p>
+            </tab>
+            <tab heading='Photos'>
+                <p>Photos will go here</p>
+            </tab>
+            <tab heading='Messages'>
+                <p>Messages will go here</p>
+            </tab>
+            <tab heading='Reviews'>
+                <p>Reviews will go here</p>
+            </tab>
+        </tabset>
+    </div>
 </div>
