--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -6,7 +6,7 @@
         <ul class="list-inline member-icons animate text-center">
             <!--#######################################################################################################-->
             <!-- 'white' will be replaced with interpelation of username: {{member.username}} part 108 under section 9 -->
-            <li class="list-inline-item"><button routerLink='/members/white' class="btn btn-primary"> 
+            <li class="list-inline-item"><button routerLink='/members/gordon' class="btn btn-primary"> 
                 <i class="fa fa-user"></i></button></li>
             <li class="list-inline-item"><button class="btn btn-primary">
                 <i id="spinning" class="fa fa-soccer-ball-o"></i></button></li>
@@ -18,7 +18,7 @@
         <h6 class="card-title" text-center mb-1><i class="fa fa-user mr-2"></i>
             {{member.firstName}} {{member.lastName}}
         </h6>
-        <p class="card-text text-muted text-center">{{member.city}}</p>
-        <p class="card-text text-muted text-center">Level: {{member.level}}</p>
+        <p class="card-text text-muted text-center">City: {{member.city}}</p>
+        <p class="card-text text-muted text-center">Level: {{member.leagueLevel}}</p>
     </div>
 </div>
