Added photo gallery for user cards. Added default photo for the member cards if the member doesn't have any photos.

--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -2,7 +2,7 @@
 
 <div class="card mb-4">
     <div class="card-img-wrapper">
-        <img src="{{member.photoUrl}}" alt="{{member.firstName}} {{member.lastName}}" class="card-img-top">
+        <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.firstName}} {{member.lastName}}" class="card-img-top">
         <ul class="list-inline member-icons animate text-center">
             <!--#######################################################################################################-->
             <!-- 'white' will be replaced with interpelation of username: {{member.username}} part 108 under section 9 -->
